fix <hr> overflow issue causing horizontal scroll bar

--- a/css/design.less
+++ b/css/design.less
@@ -258,6 +258,8 @@
 }
 
 /*____________ testspace.help.template ______________*/
+
+
 #dokuwiki__site {
     max-width: 1200px;
 }
@@ -348,19 +350,21 @@
     }
 }
 
-#dokuwiki__top hr.topSep {
+/*#dokuwiki__top */
+hr.topSep {
     color: #D9D9D9;
     height: 3;
-    /*position: absolute;*/
+    position: absolute;
     left: 0;
-    margin-left: -50%;
     right: 0;
-    margin-right: -50%;
     z-index: 999;
+    width: 100%;
 }
+
 #wrapper {
     padding-bottom: 1em;
 }
+
 #dokuwiki__footer {
 	background-color: #D9D9D9;
 
